// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Basic check basic render 1`] = `
<div
  class="rc-tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    role="tree"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-checked="false"
            aria-expanded="true"
            aria-labelledby="rc-tree-title-:rs:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              aria-checked="false"
              aria-label="Select tree node"
              class="rc-tree-checkbox"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:rs:"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-checked="false"
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:rt:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-disabled rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-checked="false"
              aria-disabled="true"
              aria-label="Select tree node"
              class="rc-tree-checkbox rc-tree-checkbox-disabled"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:rt:"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-checked="false"
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:ru:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf-last rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-checked="false"
              aria-label="Select tree node"
              class="rc-tree-checkbox"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:ru:"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic check check after data ready works 1`] = `
<div
  class="rc-tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    role="tree"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-checked="true"
            aria-expanded="true"
            aria-labelledby="rc-tree-title-:r1p:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-checkbox-checked rc-tree-treenode-leaf-last"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              aria-checked="true"
              aria-label="Select Light"
              class="rc-tree-checkbox rc-tree-checkbox-checked"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="Light"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r1p:"
              >
                Light
              </span>
            </span>
          </div>
          <div
            aria-checked="true"
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r1q:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-checkbox-checked rc-tree-treenode-leaf-last rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-checked="true"
              aria-label="Select Bamboo"
              class="rc-tree-checkbox rc-tree-checkbox-checked"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="Bamboo"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r1q:"
              >
                Bamboo
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic check check update when Tree trigger componentWillReceiveProps 1`] = `
<div
  class="rc-tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    role="tree"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-checked="true"
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r1o:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-checkbox-checked rc-tree-treenode-leaf-last rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-checked="true"
              aria-label="Select parent 1"
              class="rc-tree-checkbox rc-tree-checkbox-checked"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="parent 1"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r1o:"
              >
                parent 1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic ignore illegal node as Tree children Direct TreeNode 1`] = `
<div
  class="rc-tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    role="tree"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r34:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="00"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r34:"
              >
                00
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r35:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf-last rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="02"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r35:"
              >
                02
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic ignore illegal node as Tree children Sub TreeNode 1`] = `
<div
  class="rc-tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    role="tree"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r36:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="00"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r36:"
              >
                00
              </span>
            </span>
          </div>
          <div
            aria-expanded="true"
            aria-labelledby="rc-tree-title-:r37:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="01"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r37:"
              >
                01
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r38:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="010"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r38:"
              >
                010
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r39:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf-last rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="012"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r39:"
              >
                012
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic renders correctly 1`] = `
<div
  class="rc-tree forTest rc-tree-show-line"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    aria-multiselectable="true"
    class="rc-tree-list"
    role="tree"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-checked="false"
            aria-expanded="true"
            aria-labelledby="rc-tree-title-:r0:"
            aria-selected="false"
            class="spe rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              aria-checked="false"
              aria-label="Select parent 1"
              class="rc-tree-checkbox"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="parent 1"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r0:"
              >
                parent 1
              </span>
            </span>
          </div>
          <div
            aria-checked="false"
            aria-expanded="true"
            aria-labelledby="rc-tree-title-:r1:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-disabled rc-tree-treenode-switcher-open"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              aria-checked="false"
              aria-disabled="true"
              aria-label="Select leaf 1"
              class="rc-tree-checkbox rc-tree-checkbox-disabled"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="leaf 1"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r1:"
              >
                leaf 1
              </span>
            </span>
          </div>
          <div
            aria-checked="false"
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r2:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-checked="false"
              aria-label="Select leaf"
              class="rc-tree-checkbox"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r2:"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            aria-checked="false"
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r3:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf-last rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-checked="false"
              aria-label="Select leaf"
              class="rc-tree-checkbox"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r3:"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            aria-checked="false"
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r4:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf-last rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              aria-checked="false"
              aria-disabled="true"
              aria-label="Select leaf 2"
              class="rc-tree-checkbox rc-tree-checkbox-disabled"
              role="checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf 2"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r4:"
              >
                leaf 2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic renders opaque children correctly 1`] = `
<div
  class="rc-tree"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    role="tree"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r33:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf-last"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_close"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
              title="0"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__close"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r33:"
              >
                0
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic should support rootStyle and rootClassName 1`] = `
<div
  class="rc-tree root-tree"
  style="background-color: cyan;"
>
  <div>
    <input
      aria-label="for screen reader"
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    role="tree"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r70:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r70:"
              >
                0
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r71:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r71:"
              >
                1
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r72:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r72:"
              >
                2
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r73:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r73:"
              >
                3
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r74:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r74:"
              >
                4
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r75:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r75:"
              >
                5
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r76:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r76:"
              >
                6
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r77:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r77:"
              >
                7
              </span>
            </span>
          </div>
          <div
            aria-expanded="false"
            aria-labelledby="rc-tree-title-:r78:"
            aria-selected="false"
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf-last rc-tree-treenode-leaf"
            draggable="false"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
                id="rc-tree-title-:r78:"
              >
                8
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
